# check_fake_news

./: README.md  pyproject.toml
INF/: gui.py
INF/GUI/: main_window.py
INF/GUI/UI/: convert.txt  window.py  window.ui
INF/Scripts/: start_app.py
INF/Training/: load_data.py  testing.py  training.py
models/: fake_news_model.pkl
models/related_data/: fake_news_model.json
